crates/weaveffi-cli/tests/snapshots/go_nested_modules__bindings_go.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION]
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate

// Package nested_modules binds the nested_modules native library.
package nested_modules

/*
#cgo LDFLAGS: -lnested_modules
#include "nested_modules.h"
*/
import "C"

func init() {
	wvCheckABI()
	var n C.size_t
	table := C.nested_modules_graphics_contract(&n)
	wvCheckContract(table, n, []wvContractEntry{
		{0x2c29eef9327a6bd4, 0x12983d5271651389, "graphics.Unit"},
		{0x304088bbc28f0015, 0x97e6e809913be6b6, "graphics.new_canvas"},
		{0x49f8837532df9ac6, 0x32e5b27e81ee0957, "graphics.Canvas"},
		{0x55717fa027336b47, 0xb2bd3a6bdcce48c8, "graphics.shapes.describe"},
		{0x7626b91b8f1f53cd, 0x867bbf7cf0f41c74, "graphics.shapes.geometry.compute"},
		{0xb3efcb50d9a61ab7, 0x3cb0207dfad2a149, "graphics.GraphicsError"},
		{0xc62b16a9591b744b, 0x7895610c8487eb1b, "graphics.shapes.Shape"},
		{0xe13001f4983ccd35, 0x16e7de070b4a4cfc, "graphics.shapes.geometry.Detail"},
		{0xf3f658bcfc5dba62, 0x2665ccb47356e746, "graphics.shapes.make_shape"},
	})
}

// GraphicsError is an error the graphics module reports: *OutOfBoundsError.
//
// Match one code with errors.As and its type, or any of them with a
// GraphicsError.
type GraphicsError interface {
	error
	// Code returns the error's numeric code.
	Code() int32
	isGraphicsError()
}

// OutOfBoundsError is the GraphicsError code OutOfBounds (1): coordinate out
// of bounds.
type OutOfBoundsError struct {
	// Message describes the failure; when it's empty, Error returns the
	// code's default message, "coordinate out of bounds".
	Message string
}

// Error returns the error's message.
func (e *OutOfBoundsError) Error() string {
	if e.Message == "" {
		return "coordinate out of bounds"
	}
	return e.Message
}

// Code returns 1.
func (*OutOfBoundsError) Code() int32 {
	return 1
}

func (*OutOfBoundsError) isGraphicsError() {}

func (*OutOfBoundsError) wvPayload() []byte {
	return nil
}

func wvGraphicsError(f wvFailure) error {
	switch f.code {
	case 1:
		return &OutOfBoundsError{Message: f.message}
	}
	return f.err()
}

// Unit is a measurement unit shared with nested submodules.
type Unit int32

const (
	UnitPixels Unit = 0
	UnitPoints Unit = 1
)

func wvWriteUnit(w *wvWriter, v Unit) {
	w.writeI32(int32(v))
}

func wvReadUnit(r *wvReader) Unit {
	return Unit(r.readI32())
}

// Canvas: Top-level struct that references a struct defined one level deeper.
type Canvas struct {
	Width int32
	// Root: Reference down into a nested module
	Root Shape
}

func wvWriteCanvas(w *wvWriter, v Canvas) {
	w.writeI32(v.Width)
	wvWriteShape(w, v.Root)
}

func wvReadCanvas(r *wvReader) Canvas {
	var v Canvas
	v.Width = r.readI32()
	v.Root = wvReadShape(r)
	return v
}

// NewCanvas: Construct a Canvas.
func NewCanvas(width int32) Canvas {
	var cRetLen C.size_t
	var cErr C.nested_modules_error
	cRet := C.nested_modules_graphics_new_canvas(C.int32_t(width), &cRetLen, &cErr)
	wvTrap(&cErr)
	return wvDecode(cRet, cRetLen, wvReadCanvas)
}

// Shape is a struct one level deep that references both an ancestor enum and a deeper struct.
type Shape struct {
	Sides int32
	// Unit: Reference up to the parent module's enum
	Unit Unit
	// Detail: Reference down into a deeper module
	Detail Detail
}

func wvWriteShape(w *wvWriter, v Shape) {
	w.writeI32(v.Sides)
	wvWriteUnit(w, v.Unit)
	wvWriteDetail(w, v.Detail)
}

func wvReadShape(r *wvReader) Shape {
	var v Shape
	v.Sides = r.readI32()
	v.Unit = wvReadUnit(r)
	v.Detail = wvReadDetail(r)
	return v
}

// MakeShape: Construct a Shape.
func MakeShape(sides int32) Shape {
	var cRetLen C.size_t
	var cErr C.nested_modules_error
	cRet := C.nested_modules_graphics_shapes_make_shape(C.int32_t(sides), &cRetLen, &cErr)
	wvTrap(&cErr)
	return wvDecode(cRet, cRetLen, wvReadShape)
}

// Describe: Nested function returning a struct owned by an ancestor module.
func Describe() Canvas {
	var cRetLen C.size_t
	var cErr C.nested_modules_error
	cRet := C.nested_modules_graphics_shapes_describe(&cRetLen, &cErr)
	wvTrap(&cErr)
	return wvDecode(cRet, cRetLen, wvReadCanvas)
}

// Detail is a struct two levels deep.
type Detail struct {
	Area float64
}

func wvWriteDetail(w *wvWriter, v Detail) {
	w.writeF64(v.Area)
}

func wvReadDetail(r *wvReader) Detail {
	var v Detail
	v.Area = r.readF64()
	return v
}

// Compute: Deeper function taking an ancestor-module struct. Throws through the root module's inherited GraphicsError domain.
func Compute(shape Shape) (Detail, error) {
	cShapePtr, cShapeLen := wvBytes(wvEncode(shape, wvWriteShape))
	var cRetLen C.size_t
	var cErr C.nested_modules_error
	cRet := C.nested_modules_graphics_shapes_geometry_compute(cShapePtr, cShapeLen, &cRetLen, &cErr)
	if cErr.code != 0 {
		return Detail{}, wvGraphicsError(wvTakeError(&cErr))
	}
	return wvDecode(cRet, cRetLen, wvReadDetail), nil
}

// END bindings.go
