crates/weaveffi-cli/tests/snapshots/go_nested_modules__runtime_go.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from api.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate api.yml -o <out>

package nested_modules

/*
#include <stdlib.h>
#include "nested_modules.h"
*/
import "C"

import (
	"context"
	"fmt"
	"runtime/cgo"
	"sync/atomic"
	"unsafe"
)

// wvABIVersion is the C ABI revision these bindings were generated against.
const wvABIVersion uint32 = 3

// The runtime error codes this package produces or interprets itself.
const (
	wvCodeMarshal   int32 = -3
	wvCodeForeign   int32 = -4
	wvCodeCancelled int32 = -5
)

// Error reports a failure that no typed error domain claims: an unknown
// code, a generic failure (code -1), a producer panic (-2), a marshalling
// failure (-3), or a Go callback-interface implementation that panicked
// (-4). The code is preserved so callers can tell them apart.
type Error struct {
	// Code is the numeric ABI error code.
	Code int32
	// Message is the human-readable error message.
	Message string
}

func (e *Error) Error() string {
	return fmt.Sprintf("nested_modules: %s (code %d)", e.Message, e.Code)
}

// DebugLive reports how many resources of one kind the native library holds:
// 0 objects, 1 callbacks, 2 iterators, 3 cancel tokens, 4 returned
// allocations. It's always 0 unless the library was built with leak checks
// enabled; tests use it to assert that nothing leaked.
func DebugLive(kind int32) uint64 {
	return uint64(C.nested_modules_debug_live(C.int32_t(kind)))
}

// wvCheckABI panics when the linked library implements a different C ABI
// revision than these bindings were generated for.
func wvCheckABI() {
	if found := uint32(C.nested_modules_abi_version()); found != wvABIVersion {
		panic(fmt.Sprintf("nested_modules: ABI mismatch: these bindings expect revision %d but the linked library reports revision %d", wvABIVersion, found))
	}
}

// wvCheckModule panics when the linked library's contract checksum for a
// top-level module differs from the one these bindings were generated
// against, which means the bindings are stale.
func wvCheckModule(module string, want, found uint64) {
	if found != want {
		panic(fmt.Sprintf("nested_modules: module %q doesn't match the linked library (bindings checksum %#016x, library checksum %#016x); regenerate the bindings", module, want, found))
	}
}

// ── Errors ──

// wvFailure is a non-zero error slot copied into Go memory.
type wvFailure struct {
	code    int32
	message string
	payload []byte
}

// err converts the failure into the generic *Error.
func (f wvFailure) err() error {
	return &Error{Code: f.code, Message: f.message}
}

func wvCopyFailure(cErr *C.nested_modules_error) wvFailure {
	f := wvFailure{code: int32(cErr.code)}
	if cErr.message != nil {
		f.message = C.GoString(cErr.message)
	}
	if cErr.payload_ptr != nil {
		f.payload = wvBorrowBytes(cErr.payload_ptr, cErr.payload_len)
	}
	return f
}

// wvTakeError copies a non-zero error slot and clears it.
func wvTakeError(cErr *C.nested_modules_error) wvFailure {
	f := wvCopyFailure(cErr)
	C.nested_modules_error_clear(cErr)
	return f
}

// wvTakeBoxedError copies the heap-boxed error an async completion receives
// and frees the box.
func wvTakeBoxedError(cErr *C.nested_modules_error) wvFailure {
	f := wvCopyFailure(cErr)
	C.nested_modules_error_free(cErr)
	return f
}

// wvTrap panics with the generic *Error when the slot reports a failure.
// Wrappers of functions that declare no error domain check their slot with
// it: a failure there can only be a producer bug, a marshalling failure, or
// a callback-interface implementation that panicked.
func wvTrap(cErr *C.nested_modules_error) {
	if cErr.code != 0 {
		panic(wvTakeError(cErr).err())
	}
}

// wvForeignError reports a panic recovered inside a callback-interface
// trampoline through the producer's error slot (code -4). The producer
// copies the message, so it's only borrowed for the call.
func wvForeignError(outErr *C.nested_modules_error, recovered any) {
	msg := C.CString(fmt.Sprint(recovered))
	defer C.free(unsafe.Pointer(msg))
	C.nested_modules_error_set(outErr, C.int32_t(wvCodeForeign), msg)
}

// ── Strings and bytes ──

// wvStr returns a borrowed (pointer, length) view of s's UTF-8 bytes for the
// duration of one call. Strings may contain NUL bytes.
func wvStr(s string) (*C.uint8_t, C.size_t) {
	return (*C.uint8_t)(unsafe.Pointer(unsafe.StringData(s))), C.size_t(len(s))
}

// wvBytes returns a borrowed (pointer, length) view of b for the duration of
// one call.
func wvBytes(b []byte) (*C.uint8_t, C.size_t) {
	return (*C.uint8_t)(unsafe.Pointer(unsafe.SliceData(b))), C.size_t(len(b))
}

// wvBorrowString copies a borrowed UTF-8 run into a Go string.
func wvBorrowString(ptr *C.uint8_t, n C.size_t) string {
	if ptr == nil {
		return ""
	}
	return string(unsafe.Slice((*byte)(unsafe.Pointer(ptr)), n))
}

// wvTakeString copies a returned UTF-8 run into a Go string and releases the
// producer's allocation.
func wvTakeString(ptr *C.uint8_t, n C.size_t) string {
	if ptr == nil {
		return ""
	}
	s := wvBorrowString(ptr, n)
	C.nested_modules_free_bytes(ptr, n)
	return s
}

// wvBorrowBytes copies a borrowed byte run into Go memory. A null pointer
// copies to nil.
func wvBorrowBytes(ptr *C.uint8_t, n C.size_t) []byte {
	if ptr == nil {
		return nil
	}
	return append([]byte{}, unsafe.Slice((*byte)(unsafe.Pointer(ptr)), n)...)
}

// wvTakeBytes copies a returned byte run (raw bytes or a value buffer) into
// Go memory and releases the producer's allocation.
func wvTakeBytes(ptr *C.uint8_t, n C.size_t) []byte {
	if ptr == nil {
		return nil
	}
	b := wvBorrowBytes(ptr, n)
	C.nested_modules_free_bytes(ptr, n)
	return b
}

// ── Objects ──

// wvRef owns one strong reference to a native object on behalf of a wrapper.
// Calls borrow the pointer between acquire and release. Close may race them:
// the reference is destroyed exactly once, by close when no call is in
// flight, or else by the last in-flight call to finish.
type wvRef struct {
	ptr     unsafe.Pointer
	destroy func(unsafe.Pointer)
	// state counts in-flight calls in its upper bits; the low bit is set
	// once close has run.
	state atomic.Uint64
}

func (r *wvRef) init(ptr unsafe.Pointer, destroy func(unsafe.Pointer)) {
	r.ptr = ptr
	r.destroy = destroy
}

// acquire borrows the pointer for one call, panicking when the wrapper was
// already closed.
func (r *wvRef) acquire(typeName string) unsafe.Pointer {
	for {
		s := r.state.Load()
		if s&1 != 0 {
			panic("nested_modules: " + typeName + " used after Close")
		}
		if r.state.CompareAndSwap(s, s+2) {
			return r.ptr
		}
	}
}

// release ends one call's borrow.
func (r *wvRef) release() {
	if r.state.Add(^uint64(1)) == 1 {
		r.destroy(r.ptr)
	}
}

// close releases the wrapper's reference once no call is in flight. Calling
// it again is a no-op.
func (r *wvRef) close() {
	for {
		s := r.state.Load()
		if s&1 != 0 {
			return
		}
		if r.state.CompareAndSwap(s, s|1) {
			if s == 0 {
				r.destroy(r.ptr)
			}
			return
		}
	}
}

// ── Async ──

// wvOutcome is one async completion: a converted result, or the failure the
// producer reported.
type wvOutcome[T any] struct {
	val  T
	fail *wvFailure
}

// wvComplete delivers one async completion to the waiting wrapper. It runs on
// a producer thread inside an exported trampoline, so it never panics: a
// result that fails to decode is delivered as a marshalling failure.
func wvComplete[T any](handle unsafe.Pointer, cErr *C.nested_modules_error, convert func() T) {
	h := cgo.Handle(uintptr(handle))
	done := h.Value().(chan wvOutcome[T])
	h.Delete()
	done <- wvSettle(cErr, convert)
}

func wvSettle[T any](cErr *C.nested_modules_error, convert func() T) (o wvOutcome[T]) {
	if cErr != nil {
		if f := wvTakeBoxedError(cErr); f.code != 0 {
			o.fail = &f
			return o
		}
	}
	defer func() {
		if r := recover(); r != nil {
			o = wvOutcome[T]{fail: &wvFailure{code: wvCodeMarshal, message: fmt.Sprint(r)}}
		}
	}()
	o.val = convert()
	return o
}

// wvAwait blocks until an async call completes or ctx is done. With a cancel
// token, ctx's cancellation cancels the native call and waits for its
// completion, which the producer delivers promptly; without one, the call is
// abandoned and ctx.Err() returned at once. A cancelled completion (code -5)
// returns ctx.Err(), or context.Canceled when ctx itself isn't done.
func wvAwait[T any](ctx context.Context, done chan wvOutcome[T], token *C.nested_modules_cancel_token) (T, *wvFailure, error) {
	var o wvOutcome[T]
	select {
	case o = <-done:
	case <-ctx.Done():
		if token == nil {
			var zero T
			return zero, nil, ctx.Err()
		}
		C.nested_modules_cancel_token_cancel(token)
		o = <-done
	}
	if o.fail != nil && o.fail.code == wvCodeCancelled {
		var zero T
		if err := ctx.Err(); err != nil {
			return zero, nil, err
		}
		return zero, nil, context.Canceled
	}
	return o.val, o.fail, nil
}

// END runtime.go
