crates/weaveffi-cli/tests/snapshots/go_nested_modules__weaveffi_go.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
// Generated by WeaveFFI [VERSION] from weaveffi.yml
// DO NOT EDIT. Your changes will be overwritten.
// To regenerate: weaveffi generate weaveffi.yml -o <out>

package weaveffi

/*
#cgo LDFLAGS: -lweaveffi
#include "weaveffi.h"
#include <stdlib.h>
*/
import "C"

import (
	"encoding/binary"
	"fmt"
	"math"
	"unicode/utf8"
	"unsafe"
)

// WeaveFFIError reports a failure crossing the C boundary that no typed
// error domain claims: an unknown code, a marshalling failure, or a
// producer panic.
type WeaveFFIError struct {
	// Code is the numeric ABI error code.
	Code int32
	// Message is the human-readable error message.
	Message string
}

func (e *WeaveFFIError) Error() string {
	return fmt.Sprintf("weaveffi: %s (code %d)", e.Message, e.Code)
}

// wvTakeError reads and clears a non-zero C error slot, returning its
// code, message, and a copy of its structured payload buffer (nil when
// the code declares no payload fields).
func wvTakeError(cErr *C.weaveffi_error) (int32, string, []byte) {
	code := int32(cErr.code)
	msg := ""
	if cErr.message != nil {
		msg = C.GoString(cErr.message)
	}
	var payload []byte
	if cErr.payload_ptr != nil {
		payload = C.GoBytes(unsafe.Pointer(cErr.payload_ptr), C.int(cErr.payload_len))
	}
	C.weaveffi_error_clear(cErr)
	return code, msg, payload
}

func wvBrandError(code int32, message string, _ []byte) error {
	return &WeaveFFIError{Code: code, Message: message}
}

// wvTrap panics when the C error slot reports a failure. Non-throwing
// wrappers check their slot with it: a non-zero code there can only be
// a producer panic or a marshalling failure.
func wvTrap(cErr *C.weaveffi_error) {
	if cErr.code != 0 {
		code, msg, _ := wvTakeError(cErr)
		panic(fmt.Sprintf("weaveffi: %s (code %d)", msg, code))
	}
}

// wvWriter serializes values into the WeaveFFI value-buffer format:
// little-endian, packed, u32 length prefixes.
type wvWriter struct {
	buf []byte
}

func (w *wvWriter) writeBool(v bool) {
	if v {
		w.buf = append(w.buf, 1)
	} else {
		w.buf = append(w.buf, 0)
	}
}

func (w *wvWriter) writeI8(v int8) {
	w.buf = append(w.buf, byte(v))
}

func (w *wvWriter) writeU8(v uint8) {
	w.buf = append(w.buf, v)
}

func (w *wvWriter) writeI16(v int16) {
	w.buf = binary.LittleEndian.AppendUint16(w.buf, uint16(v))
}

func (w *wvWriter) writeU16(v uint16) {
	w.buf = binary.LittleEndian.AppendUint16(w.buf, v)
}

func (w *wvWriter) writeI32(v int32) {
	w.buf = binary.LittleEndian.AppendUint32(w.buf, uint32(v))
}

func (w *wvWriter) writeU32(v uint32) {
	w.buf = binary.LittleEndian.AppendUint32(w.buf, v)
}

func (w *wvWriter) writeI64(v int64) {
	w.buf = binary.LittleEndian.AppendUint64(w.buf, uint64(v))
}

func (w *wvWriter) writeU64(v uint64) {
	w.buf = binary.LittleEndian.AppendUint64(w.buf, v)
}

func (w *wvWriter) writeF32(v float32) {
	w.writeU32(math.Float32bits(v))
}

func (w *wvWriter) writeF64(v float64) {
	w.writeU64(math.Float64bits(v))
}

func (w *wvWriter) writeLen(n int) {
	if n < 0 || uint64(n) > uint64(^uint32(0)) {
		panic("weaveffi: value-buffer length exceeds u32 range")
	}
	w.writeU32(uint32(n))
}

func (w *wvWriter) writeString(v string) {
	w.writeLen(len(v))
	w.buf = append(w.buf, v...)
}

func (w *wvWriter) writeBytes(v []byte) {
	w.writeLen(len(v))
	w.buf = append(w.buf, v...)
}

func (w *wvWriter) writeOptionFlag(present bool) {
	w.writeBool(present)
}

// wvReader decodes values from the WeaveFFI value-buffer format. A
// malformed buffer is a producer/consumer contract violation, so every
// read panics (the same channel a trapped producer error uses) instead
// of returning a typed domain error.
type wvReader struct {
	buf []byte
	pos int
}

func wvMalformed(context string) {
	panic("weaveffi: malformed value buffer: " + context)
}

func (r *wvReader) take(n int, context string) []byte {
	if n < 0 || len(r.buf)-r.pos < n {
		wvMalformed(context)
	}
	b := r.buf[r.pos : r.pos+n]
	r.pos += n
	return b
}

func (r *wvReader) readBool() bool {
	switch r.take(1, "bool")[0] {
	case 0:
		return false
	case 1:
		return true
	}
	wvMalformed("bool byte out of range")
	return false
}

func (r *wvReader) readI8() int8 {
	return int8(r.take(1, "i8")[0])
}

func (r *wvReader) readU8() uint8 {
	return r.take(1, "u8")[0]
}

func (r *wvReader) readI16() int16 {
	return int16(binary.LittleEndian.Uint16(r.take(2, "i16")))
}

func (r *wvReader) readU16() uint16 {
	return binary.LittleEndian.Uint16(r.take(2, "u16"))
}

func (r *wvReader) readI32() int32 {
	return int32(binary.LittleEndian.Uint32(r.take(4, "i32")))
}

func (r *wvReader) readU32() uint32 {
	return binary.LittleEndian.Uint32(r.take(4, "u32"))
}

func (r *wvReader) readI64() int64 {
	return int64(binary.LittleEndian.Uint64(r.take(8, "i64")))
}

func (r *wvReader) readU64() uint64 {
	return binary.LittleEndian.Uint64(r.take(8, "u64"))
}

func (r *wvReader) readF32() float32 {
	return math.Float32frombits(r.readU32())
}

func (r *wvReader) readF64() float64 {
	return math.Float64frombits(r.readU64())
}

func (r *wvReader) readLen() int {
	n := int(r.readU32())
	if n > len(r.buf)-r.pos {
		wvMalformed("length prefix exceeds remaining buffer")
	}
	return n
}

func (r *wvReader) readString() string {
	b := r.take(r.readLen(), "string bytes")
	if !utf8.Valid(b) {
		wvMalformed("string is not valid UTF-8")
	}
	return string(b)
}

func (r *wvReader) readBytes() []byte {
	b := r.take(r.readLen(), "byte buffer")
	out := make([]byte, len(b))
	copy(out, b)
	return out
}

func (r *wvReader) readOptionFlag() bool {
	switch r.take(1, "option flag")[0] {
	case 0:
		return false
	case 1:
		return true
	}
	wvMalformed("option flag byte out of range")
	return false
}

func (r *wvReader) expectEnd() {
	if r.pos != len(r.buf) {
		wvMalformed("trailing bytes after value")
	}
}

// wvCopyBuffer copies an owned, producer-allocated value buffer into Go
// memory and releases it with weaveffi_free_bytes.
func wvCopyBuffer(ptr *C.uint8_t, length C.size_t) []byte {
	if ptr == nil {
		return nil
	}
	out := C.GoBytes(unsafe.Pointer(ptr), C.int(length))
	C.weaveffi_free_bytes(ptr, length)
	return out
}

// wvBorrowBuffer copies a borrowed value buffer into Go memory. The
// producer keeps ownership and frees it after the borrowing call returns.
func wvBorrowBuffer(ptr *C.uint8_t, length C.size_t) []byte {
	if ptr == nil {
		return nil
	}
	return C.GoBytes(unsafe.Pointer(ptr), C.int(length))
}

// GraphicsError is a typed error reported by the `graphics` module.
type GraphicsError struct {
	// Code is the numeric ABI error code (one of the GraphicsError constants).
	Code int32
	// Message is the human-readable error message.
	Message string
}

func (e *GraphicsError) Error() string {
	return fmt.Sprintf("graphics: %s (code %d)", e.Message, e.Code)
}

// GraphicsError codes.
const (
	// GraphicsErrorOutOfBounds coordinate out of bounds
	GraphicsErrorOutOfBounds int32 = 1
)

// wvMapGraphics converts a non-zero code from the `graphics` domain into a
// *GraphicsError, falling back to the generic *WeaveFFIError for unknown codes.
func wvMapGraphics(code int32, message string, payload []byte) error {
	switch code {
	case GraphicsErrorOutOfBounds:
		if message == "" {
			message = "coordinate out of bounds"
		}
		return &GraphicsError{Code: code, Message: message}
	default:
		return wvBrandError(code, message, payload)
	}
}

// Unit: A measurement unit shared with nested submodules.
type Unit int32

const (
	UnitPixels Unit = 0
	UnitPoints Unit = 1
)

// Canvas: Top-level struct that references a struct defined one level deeper.
type Canvas struct {
	Width int32
	// Root: Reference down into a nested module
	Root Shape
}

// wvPackCanvas appends v to w in the value-buffer wire format.
func wvPackCanvas(w *wvWriter, v Canvas) {
	w.writeI32(v.Width)
	wvPackShape(w, v.Root)
}

// wvUnpackCanvas decodes one Canvas from r.
func wvUnpackCanvas(r *wvReader) Canvas {
	var v Canvas
	v.Width = r.readI32()
	v.Root = wvUnpackShape(r)
	return v
}

// NewCanvas: Construct a Canvas.
func NewCanvas(width int32) Canvas {
	var cOutLen C.size_t
	var cErr C.weaveffi_error
	result := C.weaveffi_graphics_new_canvas(C.int32_t(width), &cOutLen, &cErr)
	wvTrap(&cErr)
	rRes := &wvReader{buf: wvCopyBuffer(result, cOutLen)}
	var goResult Canvas
	goResult = wvUnpackCanvas(rRes)
	rRes.expectEnd()
	return goResult
}

// Shape: A struct one level deep that references both an ancestor enum and a deeper struct.
type Shape struct {
	Sides int32
	// Unit: Reference up to the parent module's enum
	Unit Unit
	// Detail: Reference down into a deeper module
	Detail Detail
}

// wvPackShape appends v to w in the value-buffer wire format.
func wvPackShape(w *wvWriter, v Shape) {
	w.writeI32(v.Sides)
	w.writeI32(int32(v.Unit))
	wvPackDetail(w, v.Detail)
}

// wvUnpackShape decodes one Shape from r.
func wvUnpackShape(r *wvReader) Shape {
	var v Shape
	v.Sides = r.readI32()
	v.Unit = Unit(r.readI32())
	v.Detail = wvUnpackDetail(r)
	return v
}

// MakeShape: Construct a Shape.
func MakeShape(sides int32) Shape {
	var cOutLen C.size_t
	var cErr C.weaveffi_error
	result := C.weaveffi_graphics_shapes_make_shape(C.int32_t(sides), &cOutLen, &cErr)
	wvTrap(&cErr)
	rRes := &wvReader{buf: wvCopyBuffer(result, cOutLen)}
	var goResult Shape
	goResult = wvUnpackShape(rRes)
	rRes.expectEnd()
	return goResult
}

// Describe: Nested function returning a struct owned by an ancestor module.
func Describe() Canvas {
	var cOutLen C.size_t
	var cErr C.weaveffi_error
	result := C.weaveffi_graphics_shapes_describe(&cOutLen, &cErr)
	wvTrap(&cErr)
	rRes := &wvReader{buf: wvCopyBuffer(result, cOutLen)}
	var goResult Canvas
	goResult = wvUnpackCanvas(rRes)
	rRes.expectEnd()
	return goResult
}

// Detail: A struct two levels deep.
type Detail struct {
	Area float64
}

// wvPackDetail appends v to w in the value-buffer wire format.
func wvPackDetail(w *wvWriter, v Detail) {
	w.writeF64(v.Area)
}

// wvUnpackDetail decodes one Detail from r.
func wvUnpackDetail(r *wvReader) Detail {
	var v Detail
	v.Area = r.readF64()
	return v
}

// Compute: Deeper function taking an ancestor-module struct. Throws through the root module's inherited GraphicsError domain.
func Compute(shape Shape) (Detail, error) {
	wShape := &wvWriter{}
	wvPackShape(wShape, shape)
	var cShapePtr *C.uint8_t
	if len(wShape.buf) > 0 {
		cShapePtr = (*C.uint8_t)(unsafe.Pointer(&wShape.buf[0]))
	}
	var cOutLen C.size_t
	var cErr C.weaveffi_error
	result := C.weaveffi_graphics_shapes_geometry_compute(cShapePtr, C.size_t(len(wShape.buf)), &cOutLen, &cErr)
	if cErr.code != 0 {
		return Detail{}, wvMapGraphics(wvTakeError(&cErr))
	}
	rRes := &wvReader{buf: wvCopyBuffer(result, cOutLen)}
	var goResult Detail
	goResult = wvUnpackDetail(rRes)
	rRes.expectEnd()
	return goResult, nil
}


// END weaveffi.go
